spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-configmap/src/test/resources/fabric8-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-fabric8-client-configmap-deployment
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-fabric8-client-configmap
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-fabric8-client-configmap
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-fabric8-client-configmap
          image: docker.io/springcloud/spring-cloud-kubernetes-fabric8-client-configmap
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
