spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-configmap/src/test/resources/fabric8-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-cloud-kubernetes-fabric8-client-configmap-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /fabric8-configmap(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: spring-cloud-kubernetes-fabric8-client-configmap
                port:
                  number: 8080
