spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-configmap/src/test/resources/fabric8-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-fabric8-client-configmap
  name: spring-cloud-kubernetes-fabric8-client-configmap
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: spring-cloud-kubernetes-fabric8-client-configmap
  type: ClusterIP
